# ChangeLog for sci-biology/blue
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*blue-1.1.2 (07 Jan 2015)

  07 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +blue-1.1.2.ebuild,
  +metadata.xml:
  Initial ebuild, does not install the *.exe.so files. Do we need them?
