@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jan 2015; Justin Lecher <jlec@gentoo.org> blue-1.1.2.ebuild:
+  Fix license
+
 *blue-1.1.2 (07 Jan 2015)
 
   07 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +blue-1.1.2.ebuild,
